--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -274,11 +274,13 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #e6dcfe;
+  background-color: #ebe5f9;
   height: auto;
   width: 100%;
   border: 2px solid #264143;
   border-radius: 20px;
+  position: relative;
+  z-index: 1;
   box-shadow: 3px 4px 0px 1px #2a1454;
 }
 
@@ -305,10 +307,12 @@ body {
   outline: none;
   border: 2px solid #264143;
   box-shadow: 3px 4px 0px 1px #2a1454;
-  width: 690px;
+  width: 890px;
   padding: 12px 10px;
   border-radius: 4px;
   font-size: 15px;
+  position: relative;
+  z-index: 1;
 }
 
 .form_style:focus,
@@ -360,6 +364,68 @@ body {
 
 .form-area:last-child {
   padding-bottom: 30px;
+}
+
+.interest-button {
+  position: relative;
+  width: 120px;
+  height: 60px;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  color: white;
+  flex-direction: column;
+  justify-content: center;
+  border: none;
+  padding: 12px;
+  gap: 12px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.interest-button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  left: -4px;
+  top: -1px;
+  margin: auto;
+  width: 128px;
+  height: 68px;
+  border-radius: 10px;
+  z-index: -10;
+  pointer-events: none;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.interest-button::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
+  transform: translate3d(0, 0, 0) scale(0.55);
+  filter: blur(20px);
+}
+
+.interest-button:hover::after {
+  filter: blur(30px);
+}
+
+.interest-button:hover::before {
+  background: linear-gradient(-45deg, #fc00ff 0%, #40c9ff 100%);
+}
+
+.interest-button:active::before {
+  scale: 0.7;
+}
+
+.interest-button:hover::before {
+  transform: rotate(-180deg);
+}
+
+.interest-button.selected::before {
+  background: linear-gradient(-45deg, #40c9ff 0%, #e81cff 100%);
 }
 
 @media (min-width: 576px) {
