--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -4,9 +4,27 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
   margin: 0;
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(42, 20, 84, 0.8);
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: none;
+  background-color: transparent;
 }
 
 .text-gradient {
@@ -307,8 +325,20 @@ body {
   outline: none;
   border: 2px solid #264143;
   box-shadow: 3px 4px 0px 1px #2a1454;
-  width: 890px;
+  width: 100%;
   padding: 12px 10px;
+  border-radius: 4px;
+  font-size: 15px;
+  position: relative;
+  z-index: 1;
+}
+
+.interest_style {
+  outline: none;
+  border: 2px solid #264143;
+  /* box-shadow: 3px 4px 0px 1px #2a1454; */
+  width: 100%;
+  /* padding: 12px 10px; */
   border-radius: 4px;
   font-size: 15px;
   position: relative;
@@ -428,14 +458,311 @@ body {
   background: linear-gradient(-45deg, #40c9ff 0%, #e81cff 100%);
 }
 
+.card {
+  width: 300px;
+  padding: 20px;
+  background: #fff;
+  border: 6px solid #000;
+  box-shadow: 12px 12px 0 #000;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card:hover {
+  transform: translate(-5px, -5px);
+  box-shadow: 17px 17px 0 #000;
+}
+
+.card__title {
+  font-size: 18px;
+  font-weight: 900;
+  color: #000;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+
+.card__title::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 90%;
+  height: 3px;
+  background-color: #000;
+  transform: translateX(-100%);
+  transition: transform 0.3s;
+}
+
+.card:hover .card__title::after {
+  transform: translateX(0);
+}
+
+.card__content {
+  font-size: 16px;
+  line-height: 1.4;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.card__form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.card__form input {
+  padding: 10px;
+  border: 3px solid #000;
+  font-size: 16px;
+  font-family: inherit;
+  transition: transform 0.3s;
+  width: calc(100% - 26px); /* Adjust for padding and border */
+}
+
+.card__form input:focus {
+  outline: none;
+  transform: scale(1.05);
+  background-color: #000;
+  color: #ffffff;
+}
+
+.card__button {
+  border: 3px solid #000;
+  background: #000;
+  color: #fff;
+  padding: 10px;
+  font-size: 18px;
+  left: 20%;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.3s;
+  width: 50%;
+  height: 100%;
+}
+
+.card__button::before {
+  content: "Sure?";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 105%;
+  background-color: #5ad641;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(100%);
+  transition: transform 0.3s;
+}
+
+.card__button:hover::before {
+  transform: translateY(0);
+}
+
+.card__button:active {
+  transform: scale(0.95);
+}
+
+@keyframes glitch {
+  0% {
+    transform: translate(2px, 2px);
+  }
+  25% {
+    transform: translate(-2px, -2px);
+  }
+  50% {
+    transform: translate(-2px, 2px);
+  }
+  75% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(2px, 2px);
+  }
+}
+
+.glitch {
+  animation: glitch 0.3s infinite;
+}
+
+.select-btn {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  padding: 10px 15px 10px 10px;
+  cursor: pointer;
+  user-select: none;
+  border-radius: 10px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  color: black;
+}
+
+.select-btn .action {
+  position: relative;
+  overflow: hidden;
+  display: grid;
+}
+
+.select-btn .action span {
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 1;
+  grid-row-end: 1;
+  transition: all 0.5s;
+}
+
+.action span.option-1.active {
+  transform: translate(0px, 0%);
+  opacity: 1;
+}
+
+.action span.option-1.inactive {
+  transform: translate(0px, -100%);
+  opacity: 0;
+}
+
+.action span.option-2.inactive {
+  transform: translate(0px, 100%);
+  opacity: 0;
+}
+
+.action span.option-2.active {
+  transform: translate(0px, 0%);
+  opacity: 1;
+}
+
+.dropdown {
+  overflow: hidden;
+  overflow-y: visible;
+  max-height: 0;
+  transition: all 0.5s ease-in-out;
+}
+
+.container {
+  top: 0;
+  left: 0;
+  max-width: 1268px;
+}
+
+.form_area {
+  padding: 20px;
+}
+
+.streaming {
+  box-sizing: border-box;
+  overflow-y: visible;
+  overflow-x: hidden;
+  width: 100%;
+  height: 254px;
+  background: rgba(217, 217, 217, 0.58);
+  border: 1px solid white;
+  box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
+  backdrop-filter: blur(6px);
+  border-radius: 17px;
+  transition: all 0.5s;
+  display: flex;
+  padding: 12px 10px;
+  font-weight: normal;
+  margin-bottom: 20px;
+}
+
+.streaming:hover {
+  border: 1px solid black;
+  transform: scale(1);
+}
+
+.streaming:active {
+  transform: scale(0.95) rotateZ(1.7deg);
+}
+
+.streaming .card-info .title {
+  font-size: 1.2em;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 1120px) {
+  .container {
+    padding: 0 20px 0 20px;
+    position: relative;
+    top: 20px;
+    left: 0;
+    width: auto;
+    max-width: 100%;
+    margin: 0 auto;
+    max-width: 840px;
+    max-height: none;
+    height: auto;
+  }
+}
+
+@media (max-width: 680px) {
+  .container.opened {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .container {
+    top: 0;
+    width: auto;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 118px 0 0;
+    max-width: 480px;
+  }
+}
+
+/* @media (max-width: 800px) {
+  .container {
+    min-width: 480px;
+    width: 97%;
+    padding: 8px 0;
+    box-shadow: 0;
+    border: 0;
+  }
+} */
+
 @media (min-width: 576px) {
   .progress-wrap.active-progress {
     opacity: 1;
   }
 }
+@media (max-width: 767px) {
+  .form_style,
+  .interest_style {
+    width: 100%;
+  }
 
-@media (max-width: 768px) {
-  .form_style {
-    width: 590px;
+  .card {
+    width: 90%;
+  }
+
+  .form_area {
+    padding: 20px;
+  }
+
+  /* .interest_style {
+    padding: 10px 12px !important;
+  } */
+
+  .arrows {
+    display: none;
+  }
+  /* 
+  .dropdown {
+    max-height: 200px !important;
+    overflow-y: visible;
+  } */
+}
+
+@media (max-width: 1024px) {
+  .dropdown {
+    flex-wrap: wrap;
   }
 }
