--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -312,6 +312,13 @@ body {
 .sub_title {
   font-weight: 600;
   margin: 5px 0;
+  font-size: 18px;
+}
+
+.error {
+  font-weight: bold;
+  color: #ef4444;
+  margin-top: 10px;
 }
 
 .form_group {
@@ -328,7 +335,7 @@ body {
   width: 100%;
   padding: 12px 10px;
   border-radius: 4px;
-  font-size: 15px;
+  font-size: 18px;
   position: relative;
   z-index: 1;
 }
@@ -384,6 +391,15 @@ body {
 
 .btn:hover {
   opacity: 0.9;
+}
+
+.btn.disabled {
+  background-image: linear-gradient(
+    to right,
+    #d3d3d3 0%,
+    #b0b0b0 50%,
+    #a9a9a9 100%
+  );
 }
 
 .link {
@@ -685,6 +701,82 @@ body {
 .streaming .card-info .title {
   font-size: 1.2em;
   margin-bottom: 20px;
+}
+
+@keyframes slideDown {
+  from {
+    max-height: 0;
+    opacity: 0;
+  }
+  to {
+    max-height: 254px;
+    opacity: 1;
+  }
+}
+
+.slide-down {
+  animation: slideDown 0.5s ease-out forwards;
+}
+
+.sticky-button-wrapper {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  /* background: white; */
+  padding: 10px;
+}
+
+.dots-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  margin-right: 10px;
+  border-radius: 10px;
+  background-color: #000;
+  animation: pulse 1.5s infinite ease-in-out;
+}
+
+.dot:last-child {
+  margin-right: 0;
+}
+
+.dot:nth-child(1) {
+  animation-delay: -0.3s;
+}
+
+.dot:nth-child(2) {
+  animation-delay: -0.1s;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 0.1s;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.8);
+    background-color: #000;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: #121316;
+    box-shadow: 0 0 0 10px rgba(178, 212, 252, 0);
+  }
+
+  100% {
+    transform: scale(0.8);
+    background-color: #000;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
 }
 
 @media (max-width: 1120px) {
